# airbar-api

./: .env.example  API_PATHS_CHECK.md  README.md  check_user.js  package-lock.json  package.json
airbar/: .env.development  .env.example  README.md  package-lock.json  package.json  pyproject.toml  setup.py
airbar/app/: __init__.py  config.py  main.py
airbar/app/middleware/: auth.py  session.py  session_middleware.py
airbar/app/models/: item.py  notification_preferences.py  order.py  payment.py  reservation.py  session.py
airbar/app/routes/: admin.py  admin_qr.py  analytics.py  auth.py  dashboard.py  guest.py  guest_profile.py  guest_session.py  guests.py  inventory.py  metrics.py  notification_preferences.py  notifications.py  orders.py  payments.py  reservations.py  token.py  websocket.py
airbar/app/utils/: guest_profile.py  inventory_manager.py  notification_manager.py  notification_preferences.py  order_analytics.py  order_processor.py  payment_processor.py  pin_generator.py  qr_generator.py  session.py  session_manager.py  websocket_debug.py
airbar/app/websocket/: connection_manager.py  guest_handler.py  notification_handler.py  order_handler.py
airbar/prisma/: schema.prisma
airbar/prisma/migrations/: 20240326_add_notification_preferences.sql  20240327_enhance_notification_preferences.sql
airbar/prisma/migrations/20241126062925_init/: migration.sql
airbar/prisma/migrations/20241126064919_add_notification_models/: migration.sql
airbar/scripts/: seed.py
airbar/tests/: conftest.py  test_connection_management.py  test_notification_preferences.py
(+57 files in other folders)
