[tool.poetry]
name = "airbar"
version = "0.1.0"
description = "AirBar application with WebSocket communication and notification system"
authors = ["AirBar Team <team@airbar.dev>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytz = "^2024.2"
prisma = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
